cfn_benchmark/cfn_templates/iksena__llm-iac-data-analysis/cfn_benchmark__cfn_templates__Tianyi2__IRIS__data__cloudformation_collected_templates_new__template_09427_289443394.yaml
Resources:
  ecsdevopssandboxrepository8013C551:
    Type: AWS::ECR::Repository
    Properties:
      RepositoryName: ecs-devops-sandbox-repository
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
    Metadata:
      aws:cdk:path: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-repository/Resource
  ecsdevopssandboxvpc7A58AE2A:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-vpc
    Metadata:
      aws:cdk:path: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-vpc/Resource
  ecsdevopssandboxvpcPublicSubnet1Subnet416CE360:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/18
      VpcId:
        Ref: ecsdevopssandboxvpc7A58AE2A
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-vpc/PublicSubnet1
    Metadata:
      aws:cdk:path: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-vpc/PublicSubnet1/Subnet
  ecsdevopssandboxvpcPublicSubnet1RouteTable011E1420:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: ecsdevopssandboxvpc7A58AE2A
      Tags:
        - Key: Name
          Value: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-vpc/PublicSubnet1
    Metadata:
      aws:cdk:path: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-vpc/PublicSubnet1/RouteTable
  ecsdevopssandboxvpcPublicSubnet1RouteTableAssociationAB017491:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: ecsdevopssandboxvpcPublicSubnet1RouteTable011E1420
      SubnetId:
        Ref: ecsdevopssandboxvpcPublicSubnet1Subnet416CE360
    Metadata:
      aws:cdk:path: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-vpc/PublicSubnet1/RouteTableAssociation
  ecsdevopssandboxvpcPublicSubnet1DefaultRoute103AB353:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: ecsdevopssandboxvpcPublicSubnet1RouteTable011E1420
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: ecsdevopssandboxvpcIGW866A0184
    DependsOn:
      - ecsdevopssandboxvpcVPCGW83A87481
    Metadata:
      aws:cdk:path: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-vpc/PublicSubnet1/DefaultRoute
  ecsdevopssandboxvpcPublicSubnet1EIP603987C3:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-vpc/PublicSubnet1
    Metadata:
      aws:cdk:path: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-vpc/PublicSubnet1/EIP
  ecsdevopssandboxvpcPublicSubnet1NATGateway1261E2B9:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - ecsdevopssandboxvpcPublicSubnet1EIP603987C3
          - AllocationId
      SubnetId:
        Ref: ecsdevopssandboxvpcPublicSubnet1Subnet416CE360
      Tags:
        - Key: Name
          Value: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-vpc/PublicSubnet1
    Metadata:
      aws:cdk:path: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-vpc/PublicSubnet1/NATGateway
  ecsdevopssandboxvpcPublicSubnet2SubnetB94EFF2D:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.64.0/18
      VpcId:
        Ref: ecsdevopssandboxvpc7A58AE2A
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-vpc/PublicSubnet2
    Metadata:
      aws:cdk:path: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-vpc/PublicSubnet2/Subnet
  ecsdevopssandboxvpcPublicSubnet2RouteTable7B9B2A68:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: ecsdevopssandboxvpc7A58AE2A
      Tags:
        - Key: Name
          Value: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-vpc/PublicSubnet2
    Metadata:
      aws:cdk:path: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-vpc/PublicSubnet2/RouteTable
  ecsdevopssandboxvpcPublicSubnet2RouteTableAssociationDDAA30AF:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: ecsdevopssandboxvpcPublicSubnet2RouteTable7B9B2A68
      SubnetId:
        Ref: ecsdevopssandboxvpcPublicSubnet2SubnetB94EFF2D
    Metadata:
      aws:cdk:path: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-vpc/PublicSubnet2/RouteTableAssociation
  ecsdevopssandboxvpcPublicSubnet2DefaultRouteFF5AD23E:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: ecsdevopssandboxvpcPublicSubnet2RouteTable7B9B2A68
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: ecsdevopssandboxvpcIGW866A0184
    DependsOn:
      - ecsdevopssandboxvpcVPCGW83A87481
    Metadata:
      aws:cdk:path: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-vpc/PublicSubnet2/DefaultRoute
  ecsdevopssandboxvpcPublicSubnet2EIPB73B6941:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-vpc/PublicSubnet2
    Metadata:
      aws:cdk:path: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-vpc/PublicSubnet2/EIP
  ecsdevopssandboxvpcPublicSubnet2NATGatewayDC9E2D67:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - ecsdevopssandboxvpcPublicSubnet2EIPB73B6941
          - AllocationId
      SubnetId:
        Ref: ecsdevopssandboxvpcPublicSubnet2SubnetB94EFF2D
      Tags:
        - Key: Name
          Value: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-vpc/PublicSubnet2
    Metadata:
      aws:cdk:path: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-vpc/PublicSubnet2/NATGateway
  ecsdevopssandboxvpcPrivateSubnet1Subnet5F623441:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.128.0/18
      VpcId:
        Ref: ecsdevopssandboxvpc7A58AE2A
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-vpc/PrivateSubnet1
    Metadata:
      aws:cdk:path: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-vpc/PrivateSubnet1/Subnet
  ecsdevopssandboxvpcPrivateSubnet1RouteTable2D48CCD5:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: ecsdevopssandboxvpc7A58AE2A
      Tags:
        - Key: Name
          Value: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-vpc/PrivateSubnet1
    Metadata:
      aws:cdk:path: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-vpc/PrivateSubnet1/RouteTable
  ecsdevopssandboxvpcPrivateSubnet1RouteTableAssociationEF539E76:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: ecsdevopssandboxvpcPrivateSubnet1RouteTable2D48CCD5
      SubnetId:
        Ref: ecsdevopssandboxvpcPrivateSubnet1Subnet5F623441
    Metadata:
      aws:cdk:path: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-vpc/PrivateSubnet1/RouteTableAssociation
  ecsdevopssandboxvpcPrivateSubnet1DefaultRoute393EAF40:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: ecsdevopssandboxvpcPrivateSubnet1RouteTable2D48CCD5
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: ecsdevopssandboxvpcPublicSubnet1NATGateway1261E2B9
    Metadata:
      aws:cdk:path: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-vpc/PrivateSubnet1/DefaultRoute
  ecsdevopssandboxvpcPrivateSubnet2Subnet709FF402:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.192.0/18
      VpcId:
        Ref: ecsdevopssandboxvpc7A58AE2A
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-vpc/PrivateSubnet2
    Metadata:
      aws:cdk:path: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-vpc/PrivateSubnet2/Subnet
  ecsdevopssandboxvpcPrivateSubnet2RouteTableDB9903CA:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: ecsdevopssandboxvpc7A58AE2A
      Tags:
        - Key: Name
          Value: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-vpc/PrivateSubnet2
    Metadata:
      aws:cdk:path: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-vpc/PrivateSubnet2/RouteTable
  ecsdevopssandboxvpcPrivateSubnet2RouteTableAssociationCBBB012A:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: ecsdevopssandboxvpcPrivateSubnet2RouteTableDB9903CA
      SubnetId:
        Ref: ecsdevopssandboxvpcPrivateSubnet2Subnet709FF402
    Metadata:
      aws:cdk:path: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-vpc/PrivateSubnet2/RouteTableAssociation
  ecsdevopssandboxvpcPrivateSubnet2DefaultRoute66271FD4:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: ecsdevopssandboxvpcPrivateSubnet2RouteTableDB9903CA
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: ecsdevopssandboxvpcPublicSubnet2NATGatewayDC9E2D67
    Metadata:
      aws:cdk:path: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-vpc/PrivateSubnet2/DefaultRoute
  ecsdevopssandboxvpcIGW866A0184:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-vpc
    Metadata:
      aws:cdk:path: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-vpc/IGW
  ecsdevopssandboxvpcVPCGW83A87481:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: ecsdevopssandboxvpc7A58AE2A
      InternetGatewayId:
        Ref: ecsdevopssandboxvpcIGW866A0184
    Metadata:
      aws:cdk:path: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-vpc/VPCGW
  ecsdevopssandboxcluster26C7A362:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: ecs-devops-sandbox-cluster
    Metadata:
      aws:cdk:path: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-cluster/Resource
  ecsdevopssandboxexecutionroleF3EB9161:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
      RoleName: ecs-devops-sandbox-execution-role
    Metadata:
      aws:cdk:path: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-execution-role/Resource
  ecsdevopssandboxexecutionroleDefaultPolicy48C0D24F:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - ecr:GetAuthorizationToken
              - ecr:BatchCheckLayerAvailability
              - ecr:GetDownloadUrlForLayer
              - ecr:BatchGetImage
              - logs:CreateLogStream
              - logs:PutLogEvents
            Effect: Allow
            Resource: "*"
        Version: "2012-10-17"
      PolicyName: ecsdevopssandboxexecutionroleDefaultPolicy48C0D24F
      Roles:
        - Ref: ecsdevopssandboxexecutionroleF3EB9161
    Metadata:
      aws:cdk:path: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-execution-role/DefaultPolicy/Resource
  ecsdevopssandboxtaskdefinitionTaskRole9D87683E:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-task-definition/TaskRole/Resource
  ecsdevopssandboxtaskdefinitionB63CE3B2:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
        - Essential: true
          Image: amazon/amazon-ecs-sample
          Name: ecs-devops-sandbox
          PortMappings:
            - ContainerPort: 3000
              Protocol: tcp
      Cpu: "256"
      ExecutionRoleArn:
        Fn::GetAtt:
          - ecsdevopssandboxexecutionroleF3EB9161
          - Arn
      Family: ecs-devops-sandbox-task-definition
      Memory: "512"
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      TaskRoleArn:
        Fn::GetAtt:
          - ecsdevopssandboxtaskdefinitionTaskRole9D87683E
          - Arn
    Metadata:
      aws:cdk:path: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-task-definition/Resource
  ecsdevopssandboxserviceLBBAA31152:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Scheme: internet-facing
      SecurityGroups:
        - Fn::GetAtt:
            - ecsdevopssandboxserviceLBSecurityGroup1CC8623F
            - GroupId
      Subnets:
        - Ref: ecsdevopssandboxvpcPublicSubnet1Subnet416CE360
        - Ref: ecsdevopssandboxvpcPublicSubnet2SubnetB94EFF2D
      Type: application
    DependsOn:
      - ecsdevopssandboxvpcPublicSubnet1DefaultRoute103AB353
      - ecsdevopssandboxvpcPublicSubnet2DefaultRouteFF5AD23E
    Metadata:
      aws:cdk:path: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-service/LB/Resource
  ecsdevopssandboxserviceLBSecurityGroup1CC8623F:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Automatically created Security Group for ELB EcsDevopsSandboxCdkStackecsdevopssandboxserviceLB7FF21461
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: Allow from anyone on port 80
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
      VpcId:
        Ref: ecsdevopssandboxvpc7A58AE2A
    Metadata:
      aws:cdk:path: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-service/LB/SecurityGroup/Resource
  ecsdevopssandboxserviceLBSecurityGrouptoEcsDevopsSandboxCdkStackecsdevopssandboxserviceServiceSecurityGroup7F318C0730006865B0F9:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId:
        Fn::GetAtt:
          - ecsdevopssandboxserviceLBSecurityGroup1CC8623F
          - GroupId
      IpProtocol: tcp
      Description: Load balancer to target
      DestinationSecurityGroupId:
        Fn::GetAtt:
          - ecsdevopssandboxserviceServiceSecurityGroup877126C9
          - GroupId
      FromPort: 3000
      ToPort: 3000
    Metadata:
      aws:cdk:path: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-service/LB/SecurityGroup/to EcsDevopsSandboxCdkStackecsdevopssandboxserviceServiceSecurityGroup7F318C07:3000
  ecsdevopssandboxserviceLBPublicListenerCE97A8A2:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - TargetGroupArn:
            Ref: ecsdevopssandboxserviceLBPublicListenerECSGroupB43185D6
          Type: forward
      LoadBalancerArn:
        Ref: ecsdevopssandboxserviceLBBAA31152
      Port: 80
      Protocol: HTTP
    Metadata:
      aws:cdk:path: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-service/LB/PublicListener/Resource
  ecsdevopssandboxserviceLBPublicListenerECSGroupB43185D6:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Port: 80
      Protocol: HTTP
      TargetType: ip
      VpcId:
        Ref: ecsdevopssandboxvpc7A58AE2A
    Metadata:
      aws:cdk:path: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-service/LB/PublicListener/ECSGroup/Resource
  ecsdevopssandboxserviceService637B22CE:
    Type: AWS::ECS::Service
    Properties:
      Cluster:
        Ref: ecsdevopssandboxcluster26C7A362
      DeploymentConfiguration:
        MaximumPercent: 200
        MinimumHealthyPercent: 50
      DesiredCount: 1
      EnableECSManagedTags: false
      HealthCheckGracePeriodSeconds: 60
      LaunchType: FARGATE
      LoadBalancers:
        - ContainerName: ecs-devops-sandbox
          ContainerPort: 3000
          TargetGroupArn:
            Ref: ecsdevopssandboxserviceLBPublicListenerECSGroupB43185D6
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: DISABLED
          SecurityGroups:
            - Fn::GetAtt:
                - ecsdevopssandboxserviceServiceSecurityGroup877126C9
                - GroupId
          Subnets:
            - Ref: ecsdevopssandboxvpcPrivateSubnet1Subnet5F623441
            - Ref: ecsdevopssandboxvpcPrivateSubnet2Subnet709FF402
      ServiceName: ecs-devops-sandbox-service
      TaskDefinition:
        Ref: ecsdevopssandboxtaskdefinitionB63CE3B2
    DependsOn:
      - ecsdevopssandboxserviceLBPublicListenerECSGroupB43185D6
      - ecsdevopssandboxserviceLBPublicListenerCE97A8A2
    Metadata:
      aws:cdk:path: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-service/Service/Service
  ecsdevopssandboxserviceServiceSecurityGroup877126C9:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-service/Service/SecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      VpcId:
        Ref: ecsdevopssandboxvpc7A58AE2A
    Metadata:
      aws:cdk:path: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-service/Service/SecurityGroup/Resource
  ecsdevopssandboxserviceServiceSecurityGroupfromEcsDevopsSandboxCdkStackecsdevopssandboxserviceLBSecurityGroup4A35EC2930000EF9299F:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: Load balancer to target
      FromPort: 3000
      GroupId:
        Fn::GetAtt:
          - ecsdevopssandboxserviceServiceSecurityGroup877126C9
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - ecsdevopssandboxserviceLBSecurityGroup1CC8623F
          - GroupId
      ToPort: 3000
    Metadata:
      aws:cdk:path: EcsDevopsSandboxCdkStack/ecs-devops-sandbox-service/Service/SecurityGroup/from EcsDevopsSandboxCdkStackecsdevopssandboxserviceLBSecurityGroup4A35EC29:3000
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Modules: aws-cdk=2.113.0,@aws-cdk/assets=1.60.0,@aws-cdk/aws-applicationautoscaling=1.60.0,@aws-cdk/aws-autoscaling=1.60.0,@aws-cdk/aws-autoscaling-common=1.60.0,@aws-cdk/aws-autoscaling-hooktargets=1.60.0,@aws-cdk/aws-certificatemanager=1.60.0,@aws-cdk/aws-cloudwatch=1.60.0,@aws-cdk/aws-codeguruprofiler=1.60.0,@aws-cdk/aws-ec2=1.60.0,@aws-cdk/aws-ecr=1.60.0,@aws-cdk/aws-ecr-assets=1.60.0,@aws-cdk/aws-ecs=1.60.0,@aws-cdk/aws-ecs-patterns=1.60.0,@aws-cdk/aws-elasticloadbalancingv2=1.60.0,@a [...]
    Condition: CDKMetadataAvailable
Outputs:
  ecsdevopssandboxserviceLoadBalancerDNS906C781A:
    Value:
      Fn::GetAtt:
        - ecsdevopssandboxserviceLBBAA31152
        - DNSName
  ecsdevopssandboxserviceServiceURLE78C78E7:
    Value:
      Fn::Join:
        - ""
        - - http://
          - Fn::GetAtt:
              - ecsdevopssandboxserviceLBBAA31152
              - DNSName
Conditions:
  CDKMetadataAvailable:
    Fn::Or:
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - af-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ca-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-northwest-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-2
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-3
          - Fn::Equals:
              - Ref: AWS::Region
              - il-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - me-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - me-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - sa-east-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-2
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-2
